# POTranslation

./: .env.example  .gitignore  CHANGELOG.md  README.md  compile_mo.ps1  context.json  pyproject.toml  requirements.txt  run_batch_translate.ps1  test_setup.py
docs/: architecture.md  deployment-and-ops.md  feature-roadmap.md  format-support.md  implementation-plan.md  index.md  product-requirements.md  prompt-guide.md  startup-guide.md  testing-and-qa.md
examples/: sample_nb_NO.po
src/: __init__.py  app.py  cost_estimator.py  po_translate_en_to_nb.py  xliff_translate.py
tests/: test_glossary_parsing.py  test_language_support.py
